Migrate to new apache http client for web access